Deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-app-service
spec:
  selector:
    app: portfolio-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
    - protocol: TCP
      port: 443
      targetPort: 443
  type: ClusterIP
